# aerith-cbot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.example.ini  config.example.toml  docker-compose.yaml  pyproject.toml
.zed/: tasks.json
alembic/: env.py
alembic/versions/: 11a41dd31016_init.py  3c6ff7d8a5c4_add_is_notified_field.py  3ea5f9e5fb69_.py  4fde214637ab_remove_unused_fields.py  736df3ef8b57_add_is_notified_field.py  8f05e79659df_added_stickers.py  a3a725d794a7_fixes.py  ccaaf76c889f_create_user_personal_context_table.py  e15183bb6b0a_added_message.py  e20c03ca2deb_add_limits.py
llm/: group_instruction.md  group_tools.json  private_instruction.md  private_tools.json  response_schema.json
llm/instructions/: additional_instructions.json  group_instruction.md  private_instruction.md  summarize_instruction.md
llm/tools/: group_tools.json  tools.json
src/aerimory/: __init__.py  cli.py  client.py
src/aerimory/llm/: __init__.py  base_llm.py  openai_llm.py
src/aerimory/types/: __init__.py  llm.py  memory.py  vector_store.py
src/aerimory/vector_stores/: __init__.py  base_vector_store.py  chroma_vector_store.py
src/aerith_cbot/: cli.py  commands.py  config.py  container.py
src/aerith_cbot/database/: __init__.py  database_provider.py
src/aerith_cbot/database/models/: __init__.py  chat_state.py  group_limit_entry.py  limit_entry.py  message.py  sticker.py  user_group_last_contact.py  user_group_limit_entry.py  user_personal_context.py  user_private_limit_entry.py  user_support.py
src/aerith_cbot/filters/: __init__.py  admin.py  sender.py
src/aerith_cbot/handlers/: __init__.py  group.py  migration.py  private.py  stickers.py  support.py  utils.py
src/aerith_cbot/services/abstractions/: __init__.py  chat_migration_service.py  history_summarizer.py  limits_service.py  memory_service.py  message_service.py  permission_checker.py  sender_service.py  stickers_service.py  support_service.py  user_context_provider.py  voice_transcriber.py
src/aerith_cbot/services/implementations/: __init__.py  aerimory_memory_service.py  chat_dispatcher.py  clients_provider.py  config_provider.py  default_chat_migration_service.py  default_limits_service.py  default_message_service.py  default_sender_service.py  default_stickers_service.py  default_support_service.py  (+7 more)
src/aerith_cbot/utils/: mapping.py
tests/: chat_processor_test.py  conftest.py  group_message_processor_test.py  limits_service_test.py  message_queue_test.py  private_message_processor_test.py  sender_service_test.py  support_service_test.py  test_migrate_chat.py
(+55 files in other folders)
