[project]
name = "aerith-cbot"
version = "0.1.0"
description = "A cute cbot"
readme = "README.md"
authors = [{ name = "shinoxzu", email = "shinoxzu@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.18",
    "alembic>=1.14",
    "asyncpg>=0.30",
    "chatgpt-md-converter>=0.2",
    "dishka>=1.4",
    "greenlet>=3.1",
    "mem0ai>=0.1",
    "openai>=1.64",
    "pydantic>=2.10",
    "python-dotenv>=1.0",
    "sqlalchemy>=2.0",
    "uuid-utils>=0.10",
]

[project.scripts]
bot = "aerith_cbot.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I"]
